fix : again align process

--- a/style.css
+++ b/style.css
@@ -49,15 +49,3 @@
 .content{
     clear: right;
 }
-
-@media (min-width: 768px ) and (max-width:991px){
-    .container{
-        width: 45%;
-    }
-}
-
-@media (max-width: 767px){
-    .container{
-        width: 90%;
-    }
-}
